<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_3sdp">

        <LinearLayout
            android:id="@+id/ll_DrawerMenu"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_22sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/backiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_menu"
                app:tint="@color/colorPrimary" />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_title_home"
            style="@style/TextFieldBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/ll_DrawerMenu"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"

            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_toLeftOf="@id/rlCart"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/_5sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_search"
            app:tint="@color/colorPrimary" />


        <RelativeLayout
            android:id="@+id/rlCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart"
                app:tint="@color/colorPrimary"
                android:layout_margin="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/tvCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:minWidth="@dimen/_12sdp"
                android:background="@drawable/round_corner"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                android:visibility="visible" />
        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/viewDashFooter"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameDash"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

    <View

        android:id="@+id/viewDashFooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_above="@id/ll_dashFooter"
        android:background="@color/cardview_shadow_start_color" />

    <LinearLayout
        android:id="@+id/ll_dashFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="4"
        android:paddingVertical="@dimen/_5sdp">

        <LinearLayout
            android:id="@+id/ll_Home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Home"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/side_home" />

            <TextView
                android:id="@+id/tv_Home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wishlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_wishlist"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_whishlist_blank"
                app:tint="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_wishlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wishlist"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_OrderHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_OrderHistory"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/side_oderlist"
                app:tint="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_OrderHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_history"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_Account"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:src="@drawable/side_account"
                app:tint="@color/dark_grey" />

            <TextView
                android:id="@+id/tv_Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/account"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>