<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackTransparent">

    <include
        android:id="@+id/include3"
        layout="@layout/custom_actionbar"
        android:visibility="gone"
        app:iconifiedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/blue_view"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg2"
            android:paddingBottom="20dp"
            android:visibility="visible">

            <!--   <ImageView
                   android:id="@+id/logo_fairy"
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:layout_marginStart="8dp"
                   android:layout_marginTop="40dp"
                   android:layout_marginEnd="8dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:srcCompat="@mipmap/app_icon" />-->

            <!--<androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="383dp"
                android:layout_height="346dp"
                android:layout_marginHorizontal="@dimen/_22sdp"

                android:elevation="8dp"
                app:cardCornerRadius="12dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_layout_login"
                android:layout_width="383dp"
                android:layout_height="346dp"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:elevation="8dp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:visibility="visible"
                app:cardCornerRadius="12dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/login_bttn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/rect_btn_bg_primary"
                    android:drawablePadding="-55dp"
                    android:gravity="center"
                    android:paddingRight="0dp"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

                <com.chaos.view.PinView
                    android:id="@+id/pinview"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    app:hideLineWhenFilled="false"
                    app:itemCount="4"
                    app:itemHeight="40dp"
                    app:itemRadius="10dp"
                    app:itemWidth="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_contact_no" />

                <TextView
                    android:id="@+id/resendotp"
                    android:layout_width="122dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="12dp"

                    android:gravity="center_vertical"
                    android:text="Resend OTP"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/login_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toEndOf="@+id/pinview" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/rect_btn_bg_primary"
                    android:drawablePadding="-55dp"
                    android:gravity="center"
                    android:paddingRight="0dp"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pinview" />

                <TextView
                    android:id="@+id/login_singup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:paddingRight="0dp"
                    android:text="Need an account ? Signup"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/tv_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/sr"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/account"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sr"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/sr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login_to_your"
                    android:textColor="#2B2A2A"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_Forgot_Password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:gravity="end"
                    android:text="Forgot Password?"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_terms"
                    app:layout_constraintTop_toBottomOf="@+id/login_singup" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="dfffffffffffffff"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_Forgot_Password" />


                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="Terms &amp; Conditions"
                    android:textAppearance="@style/TextField_Bold"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_Forgot_Password"
                    app:layout_constraintEnd_toStartOf="@id/tv_Forgot_Password"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_btn" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_reg_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/text_color_light"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_light"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_account"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_reg_mob_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_light"
                        android:digits="0123456789"
                        android:hint="@string/enter_mobile_no"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="14"
                        android:singleLine="true"
                        android:textColor="@color/text_color"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"

                    android:backgroundTint="@color/text_color_light"
                    android:padding="5dp"
                    android:textColorHint="@color/text_color_light"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_reg_no"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tif_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/text_color_light"
                        android:hint="Enter Password"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round_corner_toggle"

                    android:padding="5dp"
                    android:textColorHint="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_account"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_cont_mob_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="0123456789"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/enter_mobile_no"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimary"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/orange_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/blue_view"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/orange_view"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>